01-greeen-deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: green-deployment
  namespace: web-app
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: green-app
  template: 
    metadata: 
      labels: 
        app: green-app
    spec:
      containers: 
      - name: green-container
        image: gcr.io/google-samples/hello-app:1.0 
        ports: 
        - containerPort: 8080
---
apiVersion: v1 
kind: Service 
metadata: 
  name: green-svc
  namespace: web-app
spec: 
  selector: 
    app: green-app
  ports: 
  - name: http 
    port: 80
    targetPort: 8080 
    protocol: TCP
